fix: properly apply z-index to header and layout (#8)

--- a/src/layout/Header.css
+++ b/src/layout/Header.css
@@ -4,6 +4,7 @@
   height: 6vh;
   background-color: white;
   padding: 24px;
+  z-index: 999;
 }
 
 .logo {
